--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tsparticles/slim": "^3.0.3",
+    "@tsparticles/vue3": "^3.0.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.4.4",
+    "style-loader": "^3.3.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -21,12 +25,17 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.4",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "style-resources-loader": "^1.5.0",
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5"
   },
   "eslintConfig": {
     "root": true,
