--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tsparticles/slim": "^3.0.3",
     "@tsparticles/vue3": "^3.0.0",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.4.4",
     "style-loader": "^3.3.3",
     "vue": "^3.2.13",
